--- a/SuppaChat/ChatWindow.xaml
+++ b/SuppaChat/ChatWindow.xaml
@@ -7,29 +7,29 @@
         mc:Ignorable="d"
         Title="PepeChat" Height="600" Width="746">
     <Grid>
-        <RichTextBox HorizontalAlignment="Left" Height="54" Margin="10,506,0,0" VerticalAlignment="Top" Width="564" TextChanged="RichTextBox_TextChanged">
+        <RichTextBox x:Name="SendBox" HorizontalAlignment="Left" Height="54" Margin="10,506,0,0" VerticalAlignment="Top" Width="564" TextChanged="RichTextBox_TextChanged">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <RichTextBox HorizontalAlignment="Left" Height="500" Margin="579,60,0,0" VerticalAlignment="Top" Width="150">
+        <RichTextBox x:Name="UserList" HorizontalAlignment="Left" Height="500" Margin="579,60,0,0" VerticalAlignment="Top" Width="150">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <RichTextBox HorizontalAlignment="Left" Height="441" Margin="10,60,0,0" VerticalAlignment="Top" Width="564">
+        <RichTextBox x:Name="ChatBox" HorizontalAlignment="Left" Height="441" Margin="10,60,0,0" VerticalAlignment="Top" Width="564">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="603,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
-        <Button Content="Logout" HorizontalAlignment="Left" Margin="472,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
-        <Button Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
+        <Button x:Name="ExitButton" Content="Exit" HorizontalAlignment="Left" Margin="603,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
+        <Button x:Name="LogoutButton" Content="Logout" HorizontalAlignment="Left" Margin="472,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
+        <Button x:Name="SettingsButton" Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="126" Height="45" Click="SettingsButton_Click"/>
     </Grid>
 </Window>
