--- a/SuppaChat/RegistrationWindow.xaml
+++ b/SuppaChat/RegistrationWindow.xaml
@@ -5,21 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="PepeChat" Height="600" Width="746">
     <Grid>
-        <ComboBox x:Name ="GroupList" HorizontalAlignment="Left" Margin="178,120,0,0" VerticalAlignment="Top" Width="390"/>
-        <TextBox x:Name="LogBox" HorizontalAlignment="Left" Height="25" Margin="178,170,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390" UndoLimit="30"/>
-        <TextBox x:Name="NickBox" HorizontalAlignment="Left" Height="25" Margin="178,220,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390" UndoLimit="15"/>
-        <TextBox x:Name="PassBox1" HorizontalAlignment="Left" Height="25" Margin="178,270,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390" UndoLimit="30"/>
-        <TextBox x:Name="PassBox2" HorizontalAlignment="Left" Height="25" Margin="178,322,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390" UndoLimit="30"/>
-        <Label x:Name="GroupLabel" Content="Choose your group:" HorizontalAlignment="Left" Margin="178,95,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="LogLabel" Content="Login" HorizontalAlignment="Left" Margin="178,144,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="NickLabel" Content="Nickname:" HorizontalAlignment="Left" Margin="178,194,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="PassLabel1" Content="Password:" HorizontalAlignment="Left" Margin="178,245,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="PassLabel2" Content="Repeat password:" HorizontalAlignment="Left" Margin="178,296,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="RegButton"  Content="Registration" Margin="178,352,0,0" FontFamily="Verdana" Foreground="Black" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="190"/>
-        <Button x:Name="BackButton" Content="Back" Margin="379,352,0,0" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" Click="BackButton_Click"/>
-        <Image  x:Name="ShowPepe1" Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Left" Height="25" Margin="586,322,0,0" VerticalAlignment="Top" Width="27"/>
-        <Image  x:Name="ShowPepe2" Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Left" Height="25" Margin="586,270,0,0" VerticalAlignment="Top" Width="27"/>
+        <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20">
+            <StackPanel>
+                <ComboBox x:Name="GroupList" materialDesign:HintAssist.Hint="Choose your group" Margin="0 0 0 0" Style="{StaticResource MaterialDesignComboBox}"/>
+                <TextBox x:Name="LogBox" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox x:Name="NickBox" materialDesign:HintAssist.Hint="Nickname" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <Grid Margin="0 10 0 0">
+                    <TextBox materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <Image  x:Name="ShowPepe1"  Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Right" Height="40"/>
+                </Grid>
+                <Grid Margin="0 10 0 0">
+                    <TextBox  materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <Image  x:Name="ShowPepe2"  Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Right" Height="40"/>
+                </Grid>
+                <Grid Margin="0 10 0 0">
+
+                    <Button x:Name="RegButton" HorizontalAlignment="Left" Content="Registration"  Click="RegButton_Click" Width="218"/>
+                    <Button x:Name="BackButton" HorizontalAlignment="Right" Content="Back" Click="BackButton_Click" Width="218"/>
+                </Grid>
+            </StackPanel>
+
+        </Border>
     </Grid>
 </Window>
