--- a/SuppaChat/LoginWindow.xaml
+++ b/SuppaChat/LoginWindow.xaml
@@ -4,18 +4,28 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SuppaChat"
-        mc:Ignorable="d"
-        Title="PepeChat" Height="600" Width="746">
+        mc:Ignorable="d" 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        WindowState="Maximized"
+        Title="PepeChat" MinHeight="550" MinWidth="700">
     <Grid>
-        <TextBox x:Name="LogBox" HorizontalAlignment="Left" Height="25" Margin="178,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390"/>
-        <TextBox x:Name="PassBox" HorizontalAlignment="Left" Height="25" Margin="178,265,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390"/>
-        <Button x:Name="LoginButton"  Content="Login" Margin="178,305,0,0" FontFamily="Verdana" Foreground="Black" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="190" Click="LoginButton_Click">
-        </Button>
-        <Image  x:Name="ShowPepe" Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Left" Height="25" Margin="573,265,0,0" VerticalAlignment="Top" Width="27"/>
-        <Button x:Name="ExitButton" Content="Exit" Margin="379,305,0,0" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" Click="ExitButton_Click" />
-        <Button x:Name="RegButton" Content="Registration" Margin="178,345,0,0" Height="25" VerticalAlignment="Top"  HorizontalAlignment="Left" Width="390" Click="RegButton_Click"/>
-        <Label x:Name="LogLabel" Content="Login" HorizontalAlignment="Left" Margin="178,180,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="PassLabel" Content="Password" HorizontalAlignment="Left" Margin="178,235,0,0" VerticalAlignment="Top"/>
-
+        <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20">
+            <StackPanel >
+                <TextBlock Text = "PepeChat" FontSize="30" FontWeight="Bold" Margin="0 10 0 0 "/>
+                    <TextBox x:Name="LogBox" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <Grid>
+                    <PasswordBox x:Name="PassBox" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"  />
+                    <TextBox x:Name="PassBox1" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Visibility="Collapsed" />
+                    <Image  x:Name="ShowPepe" Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Right" Height="40"/>
+                </Grid>
+                <Grid Margin="0 10 0 0">
+                    
+                    <Button x:Name="LoginButton" HorizontalAlignment="Left" Content="Login"  Click="LoginButton_Click" Width="218" />
+                    <Button x:Name="ExitButton" HorizontalAlignment="Right" Content="Exit" Click="ExitButton_Click" Width="218" />
+                </Grid>
+                <Button x:Name="RegButton" Content="Registration" Margin="0 10 0 0" Click="RegButton_Click" />
+            </StackPanel>
+            
+        </Border>
     </Grid>
 </Window>
