--- a/SuppaChat/ChatWindow.xaml
+++ b/SuppaChat/ChatWindow.xaml
@@ -6,31 +6,43 @@
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d"
         WindowState="Maximized"
-        Title="PepeChat" Height="600" Width="746">
-    <Grid>
-        <RichTextBox x:Name="SendBox" HorizontalAlignment="Left" Height="54" Margin="10,506,0,0" VerticalAlignment="Top" Width="564" TextChanged="RichTextBox_TextChanged">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text=""/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <RichTextBox x:Name="UserList" HorizontalAlignment="Left" Height="500" Margin="579,60,0,0" VerticalAlignment="Top" Width="150">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text=""/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <RichTextBox x:Name="ChatBox" HorizontalAlignment="Left" Height="441" Margin="10,60,0,0" VerticalAlignment="Top" Width="564">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text=""/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <Button x:Name="ExitButton" Content="Exit" HorizontalAlignment="Left" Margin="603,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
-        <Button x:Name="LogoutButton" Content="Logout" HorizontalAlignment="Left" Margin="472,10,0,0" VerticalAlignment="Top" Width="126" Height="45"/>
-        <Button x:Name="SettingsButton" Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="126" Height="45" Click="SettingsButton_Click"/>
+        Title="PepeChat" MinHeight="600" MinWidth="750" d:DesignWidth="750" d:DesignHeight="600" >
+    <Grid Background="#40444B">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="163*"/>
+        </Grid.ColumnDefinitions>
+        <Border MinWidth="746" Margin="0,0,-0.4,0" VerticalAlignment="Top" Padding="30" MaxWidth="500" CornerRadius="20" Grid.ColumnSpan="2">
+            <StackPanel>
+                <Grid>
+                    <Button x:Name="ExitButton" Content="Exit" Width="130" HorizontalAlignment="Right" Click="ExitButton_Click"/>
+                    <Button x:Name="LogoutButton" Content="Logout" Width="130" Margin="270 0 0 0"/>
+                    <Button x:Name="SettingsButton" Content="Settings" Width="130" HorizontalAlignment="Left" Click="SettingsButton_Click"/>
+                </Grid>
+                <Grid>
+                    <RichTextBox BorderThickness="1,1,1,1" Margin="0,10,135.6,-435" Background="#39363F" IsReadOnly="True" Foreground="White">
+                        <FlowDocument>
+                            <Paragraph>
+                                <Run Text=""/>
+                            </Paragraph>
+                        </FlowDocument>
+                    </RichTextBox>
+                    <RichTextBox BorderThickness="1,1,1,1" Margin="552,10,-0.4,-486" Background="#2F3136" IsReadOnly="True" Foreground="White">
+                        <FlowDocument>
+                            <Paragraph>
+                                <Run Text=""/>
+                            </Paragraph>
+                        </FlowDocument>
+                    </RichTextBox>
+                    <RichTextBox BorderThickness="1,1,1,1" Margin="0,435,135.6,-486" Background="#39363F" Foreground="White">
+                        <FlowDocument>
+                            <Paragraph>
+                                <Run Text=""/>
+                            </Paragraph>
+                        </FlowDocument>
+                    </RichTextBox>
+                </Grid>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
