--- a/SuppaChat/RegistrationWindow.xaml
+++ b/SuppaChat/RegistrationWindow.xaml
@@ -5,20 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d"
+         WindowState="Maximized"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="PepeChat" Height="600" Width="746">
-    <Grid>
-        <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20">
+    <Grid Background="#dff7f0">
+        <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20" Background="#6ffcd2">
             <StackPanel>
-                <ComboBox x:Name="GroupList" materialDesign:HintAssist.Hint="Choose your group" Margin="0 0 0 0" Style="{StaticResource MaterialDesignComboBox}"/>
+                <ComboBox x:Name="GroupList" materialDesign:HintAssist.Hint="Choose your group" Margin="0 0 0 0" IsReadOnly="True">
+                    <ComboBoxItem Content="жопа"/>
+                    <ComboBoxItem  Content="не жопа"/>
+                </ComboBox>
                 <TextBox x:Name="LogBox" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <TextBox x:Name="NickBox" materialDesign:HintAssist.Hint="Nickname" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <Grid Margin="0 10 0 0">
-                    <TextBox materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <PasswordBox x:Name="PassBox1" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" />
+                    <TextBox x:Name="PassBox1_1" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Visibility="Collapsed"/>
                     <Image  x:Name="ShowPepe1"  Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Right" Height="40"/>
                 </Grid>
                 <Grid Margin="0 10 0 0">
-                    <TextBox  materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <PasswordBox x:Name="PassBox2" materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" />
+                    <TextBox x:Name="PassBox2_1" materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Visibility="Collapsed"/>
                     <Image  x:Name="ShowPepe2"  Source="Resources/TripleMonkasSleep.png" HorizontalAlignment="Right" Height="40"/>
                 </Grid>
                 <Grid Margin="0 10 0 0">
