--- a/SuppaChat/LoginWindow.xaml
+++ b/SuppaChat/LoginWindow.xaml
@@ -6,15 +6,15 @@
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        WindowState="Maximized"
-        Title="PepeChat" MinHeight="550" MinWidth="700">
+       
+        Title="PepeChat" MinHeight="550" MinWidth="700" MaxHeight="594" MaxWidth="738">
     <Grid Background="#dff7f0">
         
         <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20" Background="#6ffcd2">
             <StackPanel>
                 <Image x:Name="PepeLove" Source="Resources/4.png" Width="25"  Visibility="Collapsed"/>
                 <TextBlock x:Name="PepeBlock" Text = "PepeChat" HorizontalAlignment="Left" FontSize="30" FontWeight="Bold" Margin="0 10 0 0 " MouseEnter="PepeBlock_MouseEnter"/>
-                    <TextBox x:Name="LogBox" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox x:Name="LogBox" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <Grid>
                     <PasswordBox x:Name="PassBox" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"  />
                     <TextBox x:Name="PassBox1" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Visibility="Collapsed" />
