--- a/SuppaChat/RegistrationWindow.xaml
+++ b/SuppaChat/RegistrationWindow.xaml
@@ -5,11 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d"
-         WindowState="Maximized"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="PepeChat" Height="600" Width="746">
-    <Grid Background="#dff7f0">
-        <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20" Background="#6ffcd2">
+        Title="PepeChat" MinHeight="550" MinWidth="700" MaxHeight="594" MaxWidth="738">
+    <Grid Background="#b4fad5">
+        <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20" Background="#6ffcd2" >
             <StackPanel>
                 <ComboBox x:Name="GroupList" materialDesign:HintAssist.Hint="Choose your group" Margin="0 0 0 0" IsReadOnly="True">
                     <ComboBoxItem Content="жопа"/>
