--- a/SuppaChat/SettingsWindow.xaml
+++ b/SuppaChat/SettingsWindow.xaml
@@ -5,16 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        
         Title="SettingsWindow" Height="600" Width="746">
     <Grid Background="#dff7f0">
-        <Border  MinWidth="400" Margin="15"  Padding="30"  CornerRadius="20" Background="#adf7e1">
+        <Border  MinWidth="400" Margin="15"  Padding="30"  CornerRadius="20" >
             <StackPanel>
-                <TabControl Background="#6ffcd2" TabStripPlacement="Left">
-                    <TabItem Name="zhopa" Header="zhopa" Background="#6ffcd2">
-                        <Button x:Name="LoginButton" HorizontalAlignment="Left" Content="Login" Width="218" />
-                        
+                <TabControl  TabStripPlacement="Left" Height="482" Margin="0,0,-0.2,0">
+                    <TabItem Name="MainTab" Header="Main Settings">
+                        <Grid>
+                            <Button x:Name="ApplyButton" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="285,47,0,0" Content="Apply" Width="218" />
+                            <TextBlock x:Name="MainBlock" Text = "Change nickname" HorizontalAlignment="Left" FontSize="16" FontWeight="Bold" Margin="10,13,0,434"/>
+                            <TextBox x:Name="NickChangeBox" FontSize="15" Margin="285,10,53.8,434"/>
+                        </Grid>
                     </TabItem>
-                    <TabItem Name="g" Header="fnjf"/>
+                    <TabItem Name="AvaTab" Header="Avatar"/>
                 </TabControl>
             </StackPanel>
         </Border>
