--- a/SuppaChat/LoginWindow.xaml
+++ b/SuppaChat/LoginWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
        
-        Title="PepeChat" MinHeight="550" MinWidth="700" MaxHeight="594" MaxWidth="738">
-    <Grid Background="#dff7f0">
+        Title="PepeChat" MinHeight="550" MinWidth="700">
+    <Grid Background="#c2f2e4">
         
         <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20" Background="#6ffcd2">
             <StackPanel>
