--- a/SuppaChat/RegistrationWindow.xaml
+++ b/SuppaChat/RegistrationWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:SuppaChat"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="PepeChat" MinHeight="550" MinWidth="700" MaxHeight="594" MaxWidth="738">
-    <Grid Background="#b4fad5">
+        Title="PepeChat" MinHeight="550" MinWidth="700" >
+    <Grid Background="#c2f2e4">
         <Border MinWidth="400" Margin="15" VerticalAlignment="Center" Padding="30" MaxWidth="500" CornerRadius="20" Background="#6ffcd2" >
             <StackPanel>
                 <ComboBox x:Name="GroupList" materialDesign:HintAssist.Hint="Choose your group" Margin="0 0 0 0" IsReadOnly="True">
